# SignalLab

./: .gitignore  CMakeLists.txt  IMPLEMENTATION-REPORT.md  README.md  index.html
.claude/skills/run-demos/: SKILL.md  drive.mjs
.github/workflows/: ci.yml  pages.yml
core/: signal_moniker.h  signal_runtime_config.h
demos/: README.md  index.html
demos/field-bridge/: README.md  index.html  presets.js  render.js
demos/field-distort/: README.md  index.html  presets.js  render.js
demos/fui-kit/: README.md  index.html  presets.js  render.js
demos/fui-kit/manifests/: neural-net.json  processor-die.json  radar.json
demos/glitch-distortion/: README.md  index.html  presets.js  render.js
demos/kinetic-type/: README.md  index.html  presets.js  render.js
demos/meters/: README.md  index.html  presets.js  render.js
demos/particles/: README.md  index.html  presets.js  render.js
demos/path-scope/: README.md  index.html  presets.js  render.js
demos/shared/: attractor.js  controls.js  easing.js  etheros-gpu.js  etheros-lite.js  field.js  fui.js  host.js  lissajous.js  proj3.js  shaping.js  signal-engine.js  style.css
demos/shared/etheros/: etheros-field-recipe.schema.json  primary_slice.wgsl
demos/transitions/: README.md  index.html  presets.js  render.js
docs/: STATUS.md  ae-implementation-options.md  ae-output-publishing.md  conventions.md  engine-roadmap.md  feasibility-notes.md  known-limitations.md  native-proof-runbook.md  product-breakup.md  user-workflows.md
docs/notion-build-log/: 2026-06-19-cleanup-roadmap-landing.md  2026-06-19-native-proof-lane.md
docs/superpowers/plans/: 2026-06-19-signallab-cleanup-roadmap-landing.md  2026-06-19-signallab-native-proof-lane.md
docs/web-demos/: BACKLOG.md  README.md  etheros-convergence.md  expansion-plan.md  fui-kit.md  glitch-distortion.md  kinetic-type.md  manifest-v0.md  meters.md  particles.md  path-scope.md  plugin-lets.md  presentation-gap-audit.md  transitions.md  visual-smoke.md
examples/: ae_bake_contract_test.cpp  core_contract_test.cpp  courier-expression.md  expression-snippets.md  live_courier_strip_test.cpp  recipe-examples.md  signal_smoke.cpp  value_codec_test.cpp
include/signalrack/: ae_bake_contract.h  live_courier_strip.h  signal_dawn_bridge.h  signal_output.h  signal_recipe.h  value_codec.h
plugin/SignalRackPlugin/: CMakeLists.txt  README.md  SignalRackPlugin.cpp
plugin/SignalRackPlugin/src/backend/: WebGpuBackend.cpp  WebGpuBackend.h
plugins/after-effects/: signalrack_bridge.h
prototypes/ae-expressions/: signal-engine.jsx
prototypes/ae-script/: SignalRack.jsx
prototypes/browser-lab/: rack-ui.html  signal-core.js  validate.js
prototypes/webgpu-lab/: codec-validate.js  index.html  signal-core-reference.js  validate.js  value-codec.js
runtime/dawn/: signal_dawn_bridge.cpp  signal_runtime.cpp  signal_runtime.h
schemas/: output-profile.schema.json  signal-rack-recipe.schema.json
schemas/examples/: 01-pulse-driver.json  02-unstable-oscillator.json  03-needle-bounce.json  04-luma-probe-driver.json  05-audio-transient-placeholder.json  06-cathode-sync-drift.json  07-entropy-birth-driver.json  08-kinetic-type-gate.json  09-undulating-ray.json  wcx-envelope.example.json
scripts/: verify-dawn-runtime.ps1  verify-native-contract.ps1
shaders/: signal_core.wgsl
tests/: bake-tests.md  luma-probe-tests.md  sidechain-tests.md  signal-output-tests.md
tool/: README.md  cathode-crt.js  index.html  make-icons.js  manifest.webmanifest
tooling/ae/: SignalRack-binding-helper.jsx
tools/: embed_wgsl.cmake
